# GLP-Sync-2

./: .dockerignore  .env.example  .gitignore  CACHING_VERIFICATION.md  CHATBOT_PLAN.md  CLAUDE.md  Dockerfile  E2E_VERIFICATION_SUMMARY.md  ENHANCEMENT_PLAN.md  FALLBACK_VERIFICATION.md  FEATURE_COMPLETE.md  FIXPLAN.md  HPE_GreenLake_Device_Sync_Documentation.docx  MANUAL_VERIFICATION_EXTENDED_THINKING.md  MANUAL_VERIFICATION_REPORT.md  OLLAMA_INTEGRATION_VERIFICATION.md  PLAN.md  PLAN_REPORTS.md  README.md  SECURITY_VALIDATION.md  SUBTASK-2-1-COMPLETE.md  SUBTASK-4-1-COMPLETE.md  SUBTASK_4_2_SUMMARY.md  SUBTASK_9-2_SUMMARY.md  SUBTASK_COMPLETE.md  TENANT_ISOLATION_VERIFICATION.md  VERIFICATION_MESSAGE_HISTORY_WITH_THINKING.md  VERIFICATION_RESULTS.md  benchmark.py  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  docker-scout-policy.yaml  generate_documentation.js  main.py  manual_security_verification.py  nginx.conf  pyproject.toml  sample_devices.xlsx  scheduler.py  (+26 more)
.github/workflows/: ci.yml  docker-scout.yml  publish.yml
db/: ER_DIAGRAM.md  RELATIONSHIPS.md  aruba_central_migration.sql  clients_migration.sql  schema.sql  subscriptions_schema.sql
db/migrations/: 001_add_device_fields.sql  002_schema_improvements.sql  003_add_central_fields.sql  004_agent_chatbot.sql  005_agent_messages_rls.sql  006_agentdb_memory_patterns.sql  007_add_composite_indexes.sql  007_custom_reports.sql  007_device_health_view.sql  007_search_history.sql  performance_notes.md
docs/: EMBEDDING_MIGRATION.md  VOYAGE_E2E_TEST.md  chatbot-api-reference.md  chatbot-integration-guide.md  database_integrity_verification.md  websocket-authentication.md
frontend/: .dockerignore  .env.example  Dockerfile  VERIFICATION.md  VERIFICATION_SUMMARY.md  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  custom_reports.ts  reports.ts
frontend/src/components/: AddDevicesPanel.tsx  AssignmentPanel.tsx  BackgroundTaskIndicator.tsx  DeviceTable.tsx  FileUpload.tsx  PerTypeAssignmentPanel.tsx  ProgressModal.tsx  ReportViewer.tsx  TypeGroupCard.tsx  WorkflowSteps.tsx  index.ts
scripts/: build-secure.sh  docker-scout-check.sh
src/glp/: __init__.py  constants.py  profiling.py
tests/: test_api_error_sanitization.py  test_auth.py  test_database.py  test_device_manager.py  test_devices.py  test_error_sanitizer.py  test_mcp_write_integration.py  test_mcp_write_tools.py  test_query_builder_metadata.py  test_report_security.py  test_resilience.py  test_scheduler_parallel.py  test_subscriptions.py
tests/agent/: __init__.py  test_agentdb_memory.py  test_auth.py  test_bulk_tag_operations.py  test_cot_redaction.py  test_cot_redactor.py  test_extended_thinking.py  test_message_validation.py  test_ollama_provider.py  test_openai_embedding.py  test_provider_factory.py  test_rls_enforcement.py  test_tenant_rate_limiter.py  test_thinking_message_history.py  test_voyageai_embedding.py  test_websocket_size_limits.py  test_websocket_ticket.py  test_write_limits.py
tests/assignment/: __init__.py  test_entities.py  test_excel_parser.py  test_use_cases.py
tests/sync/: __init__.py  test_entities.py  test_field_mapper.py  test_sync_devices_use_case.py  test_sync_subscriptions_use_case.py
workthrough/: 2026-01-09-resilience-layer-implementation.md
(+145 files in other folders)
