[project]
name = "glp-sync"
version = "0.2.0"
description = "HPE GreenLake Platform device and subscription sync to PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.9.0",
]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
profiling = [
    "snakeviz>=2.2.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    "py-spy>=0.3.14",
]

[project.scripts]
glp-sync = "main:main"
glp-scheduler = "scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]  # E402: imports after load_dotenv() are intentional
